refactor: simplify rest params that already have arrays
