# src/main/java/org/acme/features/market/color/infrastructure/repository/ColorRepository.java
@@ -179,6 +179,9 @@ public class ColorRepository {
         .ifPresent(name -> sq.where("name", SqlOperator.EQ, SqlParameterValue.of(name)));
     filter.getMerchant().ifPresent(merchant -> sq.where("merchant", SqlOperator.EQ,
         SqlParameterValue.of(merchant.getUidValue())));
+    if (!filter.getMerchants().isEmpty()) {
+      sq.where("merchant", SqlOperator.IN, SqlListParameterValue.strings(filter.getMerchants()));
+    }
     filter.getMerchantMerchantAccesible().ifPresent(merchantMerchantAccesible -> {
       sq.where("color.merchant", SqlOperator.EQ, SqlParameterValue.of(merchantMerchantAccesible));
     });
