# src/main/java/org/acme/features/market/fruit/infrastructure/driver/rest/FruitController.java
@@ -6,6 +6,7 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.stream.Stream;
 
 import org.acme.common.infrastructure.CurrentRequest;
 import org.acme.features.market.fruit.application.FruitDto;
@@ -99,7 +100,6 @@ public class FruitController implements FruitApi {
 
   /**
    * @autogenerated ApiControllerGenerator
-   * @param uid
    * @param uids
    * @param search
    * @param name
@@ -110,9 +110,8 @@ public class FruitController implements FruitApi {
    * @return
    */
   @Override
-  public Response fruitApiList(final String uid, final List<String> uids, final String search,
-      final String name, final Integer limit, final String sinceUid, final String sinceName,
-      final String order) {
+  public Response fruitApiList(final List<String> uids, final String search, final String name,
+      final Integer limit, final String sinceUid, final String sinceName, final String order) {
     List<FruitOrder> orderSteps = null == order ? List.of()
         : Arrays.asList(order.split(",")).stream().map(this::mapOrder).filter(Objects::nonNull)
             .toList();
@@ -120,8 +119,8 @@ public class FruitController implements FruitApi {
     FruitCursor.FruitCursorBuilder cursorBuilder = FruitCursor.builder();
     cursorBuilder = cursorBuilder.limit(limit);
     cursorBuilder = cursorBuilder.sinceUid(sinceUid);
-    filterBuilder = filterBuilder.uid(uid);
-    filterBuilder = filterBuilder.uids(uids);
+    filterBuilder =
+        filterBuilder.uids(uids.stream().flatMap(part -> Stream.of(part.split(","))).toList());
     filterBuilder = filterBuilder.search(search);
     filterBuilder = filterBuilder.name(name);
     cursorBuilder = cursorBuilder.sinceName(sinceName);
@@ -231,12 +230,6 @@ public class FruitController implements FruitApi {
       next.append("&uids=" + uidsValue);
       first.append("&uids=" + uidsValue);
     }
-    filter.getUid().ifPresent(uid -> {
-      String uidValue = URLEncoder.encode(uid, StandardCharsets.UTF_8);
-      self.append("&uid=" + uidValue);
-      next.append("&uid=" + uidValue);
-      first.append("&uid=" + uidValue);
-    });
     filter.getSearch().ifPresent(search -> {
       String searchValue = URLEncoder.encode(search, StandardCharsets.UTF_8);
       self.append("&search=" + searchValue);
