# src/main/java/org/acme/features/market/medal/infrastructure/driver/rest/MedalController.java
@@ -6,6 +6,7 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.stream.Stream;
 
 import org.acme.common.infrastructure.CurrentRequest;
 import org.acme.features.market.medal.application.MedalDto;
@@ -99,7 +100,6 @@ public class MedalController implements MedalApi {
 
   /**
    * @autogenerated ApiControllerGenerator
-   * @param uid
    * @param uids
    * @param search
    * @param name
@@ -110,9 +110,8 @@ public class MedalController implements MedalApi {
    * @return
    */
   @Override
-  public Response medalApiList(final String uid, final List<String> uids, final String search,
-      final String name, final Integer limit, final String sinceUid, final String sinceName,
-      final String order) {
+  public Response medalApiList(final List<String> uids, final String search, final String name,
+      final Integer limit, final String sinceUid, final String sinceName, final String order) {
     List<MedalOrder> orderSteps = null == order ? List.of()
         : Arrays.asList(order.split(",")).stream().map(this::mapOrder).filter(Objects::nonNull)
             .toList();
@@ -120,8 +119,8 @@ public class MedalController implements MedalApi {
     MedalCursor.MedalCursorBuilder cursorBuilder = MedalCursor.builder();
     cursorBuilder = cursorBuilder.limit(limit);
     cursorBuilder = cursorBuilder.sinceUid(sinceUid);
-    filterBuilder = filterBuilder.uid(uid);
-    filterBuilder = filterBuilder.uids(uids);
+    filterBuilder =
+        filterBuilder.uids(uids.stream().flatMap(part -> Stream.of(part.split(","))).toList());
     filterBuilder = filterBuilder.search(search);
     filterBuilder = filterBuilder.name(name);
     cursorBuilder = cursorBuilder.sinceName(sinceName);
@@ -231,12 +230,6 @@ public class MedalController implements MedalApi {
       next.append("&uids=" + uidsValue);
       first.append("&uids=" + uidsValue);
     }
-    filter.getUid().ifPresent(uid -> {
-      String uidValue = URLEncoder.encode(uid, StandardCharsets.UTF_8);
-      self.append("&uid=" + uidValue);
-      next.append("&uid=" + uidValue);
-      first.append("&uid=" + uidValue);
-    });
     filter.getSearch().ifPresent(search -> {
       String searchValue = URLEncoder.encode(search, StandardCharsets.UTF_8);
       self.append("&search=" + searchValue);
