# src/main/java/org/acme/features/market/merchant/infrastructure/driver/rest/MerchantController.java
@@ -6,6 +6,7 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.stream.Stream;
 
 import org.acme.common.infrastructure.CurrentRequest;
 import org.acme.features.market.merchant.application.MerchantDto;
@@ -141,7 +142,6 @@ public class MerchantController implements MerchantApi {
 
   /**
    * @autogenerated ApiControllerGenerator
-   * @param uid
    * @param uids
    * @param search
    * @param enabled
@@ -153,7 +153,7 @@ public class MerchantController implements MerchantApi {
    * @return
    */
   @Override
-  public Response merchantApiList(final String uid, final List<String> uids, final String search,
+  public Response merchantApiList(final List<String> uids, final String search,
       final Boolean enabled, final String name, final Integer limit, final String sinceUid,
       final String sinceName, final String order) {
     List<MerchantOrder> orderSteps = null == order ? List.of()
@@ -163,8 +163,8 @@ public class MerchantController implements MerchantApi {
     MerchantCursor.MerchantCursorBuilder cursorBuilder = MerchantCursor.builder();
     cursorBuilder = cursorBuilder.limit(limit);
     cursorBuilder = cursorBuilder.sinceUid(sinceUid);
-    filterBuilder = filterBuilder.uid(uid);
-    filterBuilder = filterBuilder.uids(uids);
+    filterBuilder =
+        filterBuilder.uids(uids.stream().flatMap(part -> Stream.of(part.split(","))).toList());
     filterBuilder = filterBuilder.search(search);
     filterBuilder = filterBuilder.enabled(enabled);
     filterBuilder = filterBuilder.name(name);
@@ -286,12 +286,6 @@ public class MerchantController implements MerchantApi {
       next.append("&uids=" + uidsValue);
       first.append("&uids=" + uidsValue);
     }
-    filter.getUid().ifPresent(uid -> {
-      String uidValue = URLEncoder.encode(uid, StandardCharsets.UTF_8);
-      self.append("&uid=" + uidValue);
-      next.append("&uid=" + uidValue);
-      first.append("&uid=" + uidValue);
-    });
     filter.getSearch().ifPresent(search -> {
       String searchValue = URLEncoder.encode(search, StandardCharsets.UTF_8);
       self.append("&search=" + searchValue);
