# src/main/java/org/acme/features/market/verify/infrastructure/driver/rest/VerifyController.java
@@ -6,6 +6,7 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.stream.Stream;
 
 import org.acme.common.infrastructure.CurrentRequest;
 import org.acme.features.market.verify.application.VerifyDto;
@@ -106,7 +107,6 @@ public class VerifyController implements VerifyApi {
 
   /**
    * @autogenerated ApiControllerGenerator
-   * @param uid
    * @param uids
    * @param search
    * @param name
@@ -117,9 +117,8 @@ public class VerifyController implements VerifyApi {
    * @return
    */
   @Override
-  public Response verifyApiList(final String uid, final List<String> uids, final String search,
-      final String name, final Integer limit, final String sinceUid, final String sinceName,
-      final String order) {
+  public Response verifyApiList(final List<String> uids, final String search, final String name,
+      final Integer limit, final String sinceUid, final String sinceName, final String order) {
     List<VerifyOrder> orderSteps = null == order ? List.of()
         : Arrays.asList(order.split(",")).stream().map(this::mapOrder).filter(Objects::nonNull)
             .toList();
@@ -127,8 +126,8 @@ public class VerifyController implements VerifyApi {
     VerifyCursor.VerifyCursorBuilder cursorBuilder = VerifyCursor.builder();
     cursorBuilder = cursorBuilder.limit(limit);
     cursorBuilder = cursorBuilder.sinceUid(sinceUid);
-    filterBuilder = filterBuilder.uid(uid);
-    filterBuilder = filterBuilder.uids(uids);
+    filterBuilder =
+        filterBuilder.uids(uids.stream().flatMap(part -> Stream.of(part.split(","))).toList());
     filterBuilder = filterBuilder.search(search);
     filterBuilder = filterBuilder.name(name);
     cursorBuilder = cursorBuilder.sinceName(sinceName);
@@ -280,12 +279,6 @@ public class VerifyController implements VerifyApi {
       next.append("&uids=" + uidsValue);
       first.append("&uids=" + uidsValue);
     }
-    filter.getUid().ifPresent(uid -> {
-      String uidValue = URLEncoder.encode(uid, StandardCharsets.UTF_8);
-      self.append("&uid=" + uidValue);
-      next.append("&uid=" + uidValue);
-      first.append("&uid=" + uidValue);
-    });
     filter.getSearch().ifPresent(search -> {
       String searchValue = URLEncoder.encode(search, StandardCharsets.UTF_8);
       self.append("&search=" + searchValue);
